--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -22,6 +22,22 @@ p {
     font-size: 1.5em;
     margin: 20px;
 }
+//this goes to the embed container div class
+.youtube {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+}
+
+//the class you give to the iframe
+.video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 #footer {
 	margin-top: 30px;
 	border-top: 1px solid #eeeeee;
