--- a/templates/views/application.pug
+++ b/templates/views/application.pug
@@ -22,5 +22,9 @@ block content
 		.row
 			.container
 				h1 Helpful Videos:
-				iframe(width='560', height='315', src='https://www.youtube-nocookie.com/embed/sWo9VHZChG0?rel=0', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
-				iframe(width='560', height='315', src='https://www.youtube-nocookie.com/embed/xyFlWaLR6wI', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
+				.col-md-6
+					.youtube
+						iframe.video(width='560', height='315', src='https://www.youtube-nocookie.com/embed/sWo9VHZChG0?rel=0', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
+				.col-md-6
+					.youtube
+						iframe.video(width='560', height='315', src='https://www.youtube-nocookie.com/embed/xyFlWaLR6wI', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
